# speech-to-text-app

./: .gitignore  CONTRIBUTING.md  README.md  SpeechToTextApp.entitlements
.cursor/rules/: git-conventional-commits.mdc  macos-platform.mdc  project-overview.mdc  python-guidelines.mdc  swift-explanation-style.mdc  swift-guidelines.mdc  xcode-info-plist.mdc  xcode-project-structure.mdc
Config/: settings.yaml
Python/: config.py  llm_processor.py  pyproject.toml  test_bridge.py  transcribe.py  transcription_server.py  whisper_STTProvider.py  whisper_wrapper.py
SpeechToTextApp.xcodeproj/: project.pbxproj
Swift/: AudioRecorder.swift  FolderAccessManager.swift  HistoryManager.swift  HistoryView.swift  HomeTabView.swift  HotkeyManager.swift  HotkeyRecorder.swift  Info.plist  Logger.swift  MenuBarIconManager.swift  MenuBarPopoverView.swift  MenuBarView.swift  NotificationManager.swift  NotificationView.swift  PasteManager.swift  PermissionManager.swift  PythonBridge.swift  ServerManager.swift  SettingsManager.swift  SettingsTabView.swift  SettingsView.swift  SettingsWindowView.swift  SpeechToTextApp.swift  TranscriptionServer.swift  TranscriptionServerClient.swift  speechToTextApp.swift  temp.swift
docs/: architecture.md  configuration.md  development.md  quickstart.md  troubleshooting.md
docs/artifacts/: UI_REDESIGN_PLAN.md
speech-to-text-app/: README.md
speech-to-text-app/speech-to-text-app/: PasteManager.swift  (+4 more)
stt-server-py/: base_STTProvider.py  config.py  llm_processor.py  pyproject.toml  settings.yaml  stt.py  transcription_server.py  whisper_STTProvider.py
(+2 files in other folders)
